--- a/Model Building.ipynb
+++ b/Model Building.ipynb
@@ -1138,6 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "077ca8bd",
    "metadata": {},
    "outputs": [
     {
@@ -1390,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "5bcee11c",
    "metadata": {},
    "outputs": [
@@ -1398,7 +1399,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\zheng\\Documents\\ds music project\\.venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\zheng\\Documents\\MMU SHIT\\YEAR2\\SEM2\\DATA SCIENCE FUNDAMENTALS\\Music-Popularity-Prediction\\.venv\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -1411,7 +1412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "99edd49f",
    "metadata": {},
    "outputs": [],
@@ -1433,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "id": "7305f2d1",
    "metadata": {},
    "outputs": [],
@@ -5211,7 +5212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 15,
    "id": "a2e122ed",
    "metadata": {},
    "outputs": [
@@ -6315,7 +6316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "id": "addeaf5e",
    "metadata": {},
    "outputs": [
@@ -6355,6 +6356,8 @@
     }
    ],
    "source": [
+    "from catboost import CatBoostClassifier\n",
+    "\n",
     "pipe_CatBoost = imbpipeline(\n",
     "    [\n",
     "\n",
@@ -6683,6 +6686,49 @@
    ],
    "source": [
     "plot_feature_importance(pipe_CatBoost,X,y)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e2780c6e",
+   "metadata": {},
+   "source": [
+    "### Saving the best model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b88f2d45",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['final_model.pkl']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "pipe_final_CatBoost = imbpipeline(\n",
+    "    [\n",
+    "\n",
+    "     ('preprocessor',preprocessor),\n",
+    "              ('over',smoteNC2),\n",
+    "\n",
+    "     ('classifier',CatBoostClassifier(thread_count=-1,silent=True,task_type=\"GPU\"))]\n",
+    "    )\n",
+    "pipe_final_CatBoost.set_params(**cat_best_params)\n",
+    "\n",
+    "pipe_final_CatBoost.fit(X,y)\n",
+    "\n",
+    "joblib.dump(pipe_final_CatBoost,'final_model.pkl')\n"
    ]
   }
  ],
