add check for data imbalance

--- a/Exploratory Data Analysis.ipynb
+++ b/Exploratory Data Analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "6943c704",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "3591957a",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "8bba46ff",
    "metadata": {},
    "outputs": [],
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "d7bf5907",
    "metadata": {},
    "outputs": [
@@ -1050,13 +1050,47 @@
        "9   78.899               4    acoustic                1  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head(10)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b90195eb",
+   "metadata": {},
+   "source": [
+    "### Check for data imbalance using ratio of popular songs to non-popular songs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "60019910",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ratio of popular to non-popular songs is 0.32.\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_pop = sum(df['popularity_flag'] == 1)\n",
+    "\n",
+    "# Calculate the number of non-popular songs\n",
+    "num_non_pop = sum(df['popularity_flag'] == 0)\n",
+    "\n",
+    "\n",
+    "ratio = num_pop / num_non_pop\n",
+    "print(f'The ratio of popular to non-popular songs is {ratio:.2f}.')\n"
    ]
   },
   {
@@ -1292,7 +1326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
