edit feature selection

--- a/Model Building.ipynb
+++ b/Model Building.ipynb
@@ -1068,19 +1068,287 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "d66743ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>duration_ms</th>\n",
+       "      <th>explicit</th>\n",
+       "      <th>danceability</th>\n",
+       "      <th>energy</th>\n",
+       "      <th>key</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>speechiness</th>\n",
+       "      <th>instrumentalness</th>\n",
+       "      <th>liveness</th>\n",
+       "      <th>valence</th>\n",
+       "      <th>tempo</th>\n",
+       "      <th>time_signature</th>\n",
+       "      <th>track_genre</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>22832</th>\n",
+       "      <td>197424</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.247</td>\n",
+       "      <td>0.9370</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0914</td>\n",
+       "      <td>0.789000</td>\n",
+       "      <td>0.7210</td>\n",
+       "      <td>0.1350</td>\n",
+       "      <td>175.189</td>\n",
+       "      <td>4</td>\n",
+       "      <td>drum-and-bass</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79002</th>\n",
+       "      <td>84948</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.282</td>\n",
+       "      <td>0.0663</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0448</td>\n",
+       "      <td>0.930000</td>\n",
+       "      <td>0.0985</td>\n",
+       "      <td>0.1550</td>\n",
+       "      <td>209.557</td>\n",
+       "      <td>4</td>\n",
+       "      <td>turkish</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27606</th>\n",
+       "      <td>284307</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.492</td>\n",
+       "      <td>0.4740</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0351</td>\n",
+       "      <td>0.000022</td>\n",
+       "      <td>0.0855</td>\n",
+       "      <td>0.2700</td>\n",
+       "      <td>130.143</td>\n",
+       "      <td>4</td>\n",
+       "      <td>folk</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80020</th>\n",
+       "      <td>292693</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.327</td>\n",
+       "      <td>0.2690</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0339</td>\n",
+       "      <td>0.000234</td>\n",
+       "      <td>0.1080</td>\n",
+       "      <td>0.0857</td>\n",
+       "      <td>141.514</td>\n",
+       "      <td>4</td>\n",
+       "      <td>world-music</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49203</th>\n",
+       "      <td>320960</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.822</td>\n",
+       "      <td>0.4460</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0321</td>\n",
+       "      <td>0.001020</td>\n",
+       "      <td>0.1470</td>\n",
+       "      <td>0.6540</td>\n",
+       "      <td>119.994</td>\n",
+       "      <td>4</td>\n",
+       "      <td>k-pop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11265</th>\n",
+       "      <td>454988</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.744</td>\n",
+       "      <td>0.8100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0473</td>\n",
+       "      <td>0.907000</td>\n",
+       "      <td>0.0606</td>\n",
+       "      <td>0.7150</td>\n",
+       "      <td>123.018</td>\n",
+       "      <td>4</td>\n",
+       "      <td>chicago-house</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51104</th>\n",
+       "      <td>210367</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.817</td>\n",
+       "      <td>0.5390</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0621</td>\n",
+       "      <td>0.000496</td>\n",
+       "      <td>0.0990</td>\n",
+       "      <td>0.1580</td>\n",
+       "      <td>97.062</td>\n",
+       "      <td>4</td>\n",
+       "      <td>latin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65722</th>\n",
+       "      <td>152093</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.545</td>\n",
+       "      <td>0.3350</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0300</td>\n",
+       "      <td>0.000714</td>\n",
+       "      <td>0.1770</td>\n",
+       "      <td>0.3060</td>\n",
+       "      <td>119.617</td>\n",
+       "      <td>4</td>\n",
+       "      <td>rockabilly</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5218</th>\n",
+       "      <td>128600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.504</td>\n",
+       "      <td>0.5770</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0315</td>\n",
+       "      <td>0.215000</td>\n",
+       "      <td>0.1070</td>\n",
+       "      <td>0.7210</td>\n",
+       "      <td>145.168</td>\n",
+       "      <td>3</td>\n",
+       "      <td>black-metal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41260</th>\n",
+       "      <td>184370</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.461</td>\n",
+       "      <td>0.5000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0614</td>\n",
+       "      <td>0.030000</td>\n",
+       "      <td>0.1160</td>\n",
+       "      <td>0.5720</td>\n",
+       "      <td>76.176</td>\n",
+       "      <td>4</td>\n",
+       "      <td>hip-hop</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>64334 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       duration_ms  explicit  danceability  energy key  mode  speechiness  \\\n",
+       "22832       197424         0         0.247  0.9370   9     0       0.0914   \n",
+       "79002        84948         0         0.282  0.0663   0     0       0.0448   \n",
+       "27606       284307         0         0.492  0.4740   0     1       0.0351   \n",
+       "80020       292693         0         0.327  0.2690   4     1       0.0339   \n",
+       "49203       320960         0         0.822  0.4460   7     0       0.0321   \n",
+       "...            ...       ...           ...     ...  ..   ...          ...   \n",
+       "11265       454988         0         0.744  0.8100   1     1       0.0473   \n",
+       "51104       210367         0         0.817  0.5390   6     0       0.0621   \n",
+       "65722       152093         0         0.545  0.3350  10     1       0.0300   \n",
+       "5218        128600         0         0.504  0.5770   7     0       0.0315   \n",
+       "41260       184370         0         0.461  0.5000   1     1       0.0614   \n",
+       "\n",
+       "       instrumentalness  liveness  valence    tempo time_signature  \\\n",
+       "22832          0.789000    0.7210   0.1350  175.189              4   \n",
+       "79002          0.930000    0.0985   0.1550  209.557              4   \n",
+       "27606          0.000022    0.0855   0.2700  130.143              4   \n",
+       "80020          0.000234    0.1080   0.0857  141.514              4   \n",
+       "49203          0.001020    0.1470   0.6540  119.994              4   \n",
+       "...                 ...       ...      ...      ...            ...   \n",
+       "11265          0.907000    0.0606   0.7150  123.018              4   \n",
+       "51104          0.000496    0.0990   0.1580   97.062              4   \n",
+       "65722          0.000714    0.1770   0.3060  119.617              4   \n",
+       "5218           0.215000    0.1070   0.7210  145.168              3   \n",
+       "41260          0.030000    0.1160   0.5720   76.176              4   \n",
+       "\n",
+       "         track_genre  \n",
+       "22832  drum-and-bass  \n",
+       "79002        turkish  \n",
+       "27606           folk  \n",
+       "80020    world-music  \n",
+       "49203          k-pop  \n",
+       "...              ...  \n",
+       "11265  chicago-house  \n",
+       "51104          latin  \n",
+       "65722     rockabilly  \n",
+       "5218     black-metal  \n",
+       "41260        hip-hop  \n",
+       "\n",
+       "[64334 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from feature_engine.selection import DropCorrelatedFeatures\n",
     "\n",
-    "fes = DropCorrelatedFeatures(threshold=0.3)"
+    "fes = DropCorrelatedFeatures(threshold=0.6)\n",
+    "te = fes.fit_transform(X_train,y_train)\n",
+    "te"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "4797c378",
    "metadata": {},
    "outputs": [],
@@ -1096,7 +1364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "6c8a6fd9",
    "metadata": {},
    "outputs": [],
@@ -1137,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "077ca8bd",
    "metadata": {},
    "outputs": [
@@ -1151,11 +1419,11 @@
       "Average precision: 0.606 (+/- 0.005)\n",
       "F1 score: 0.596 (+/- 0.005)\n",
       "Balanced accuracy: 0.754 (+/- 0.004)\n",
-      "Average precision: 0.628 (+/- 0.005)\n",
-      "F1 score: 0.528 (+/- 0.004)\n",
-      "Balanced accuracy: 0.684 (+/- 0.002)\n",
-      "Average precision: 0.609 (+/- 0.005)\n",
-      "F1 score: 0.596 (+/- 0.005)\n",
+      "Average precision: 0.630 (+/- 0.005)\n",
+      "F1 score: 0.532 (+/- 0.007)\n",
+      "Balanced accuracy: 0.687 (+/- 0.004)\n",
+      "Average precision: 0.606 (+/- 0.005)\n",
+      "F1 score: 0.596 (+/- 0.006)\n",
       "Balanced accuracy: 0.754 (+/- 0.004)\n",
       "Average precision: 0.627 (+/- 0.004)\n",
       "F1 score: 0.608 (+/- 0.006)\n",
@@ -1238,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "id": "e4c87875",
    "metadata": {},
    "outputs": [
@@ -1301,21 +1569,21 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>both</th>\n",
-       "      <td>0.608667</td>\n",
-       "      <td>0.753689</td>\n",
-       "      <td>0.596222</td>\n",
-       "      <td>0.004643</td>\n",
-       "      <td>0.003505</td>\n",
-       "      <td>0.004734</td>\n",
+       "      <td>0.605690</td>\n",
+       "      <td>0.754049</td>\n",
+       "      <td>0.596330</td>\n",
+       "      <td>0.005015</td>\n",
+       "      <td>0.004315</td>\n",
+       "      <td>0.005606</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>feature_selection</th>\n",
-       "      <td>0.627933</td>\n",
-       "      <td>0.684463</td>\n",
-       "      <td>0.528416</td>\n",
-       "      <td>0.005101</td>\n",
-       "      <td>0.002420</td>\n",
-       "      <td>0.004158</td>\n",
+       "      <td>0.630199</td>\n",
+       "      <td>0.686720</td>\n",
+       "      <td>0.532165</td>\n",
+       "      <td>0.005109</td>\n",
+       "      <td>0.004134</td>\n",
+       "      <td>0.007051</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>oversampling</th>\n",
@@ -1344,8 +1612,8 @@
        "score             average_precision balanced_accuracy  f1_score   \n",
        "model                                                             \n",
        "baseline                   0.630397          0.687034  0.532710   \n",
-       "both                       0.608667          0.753689  0.596222   \n",
-       "feature_selection          0.627933          0.684463  0.528416   \n",
+       "both                       0.605690          0.754049  0.596330   \n",
+       "feature_selection          0.630199          0.686720  0.532165   \n",
        "oversampling               0.605969          0.754218  0.596470   \n",
        "oversampling2              0.627238          0.753277  0.608240   \n",
        "\n",
@@ -1353,13 +1621,13 @@
        "score             average_precision balanced_accuracy  f1_score  \n",
        "model                                                            \n",
        "baseline                   0.005217          0.004777  0.008199  \n",
-       "both                       0.004643          0.003505  0.004734  \n",
-       "feature_selection          0.005101          0.002420  0.004158  \n",
+       "both                       0.005015          0.004315  0.005606  \n",
+       "feature_selection          0.005109          0.004134  0.007051  \n",
        "oversampling               0.005173          0.003581  0.004911  \n",
        "oversampling2              0.004290          0.004862  0.006231  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
